--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
         </button>
     </div>
     <!--Carousel-->
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, corporis voluptates maiores soluta laborum assumenda voluptatum 
+        praesentium exercitationem excepturi commodi cumque laboriosam illum, magni sequi libero, natus aperiam repellat fugiat. Lorem ipsum
+         dolor sit amet consectetur, adipisicing elit. Laborum dolore adipisci exercitationem quis atque quos, unde molestiae, tempora 
+         recusandae architecto perspiciatis saepe, labore ullam obcaecati nobis sit facilis quae alias?</p>
     <!--The team beginning-->
     <h3>The team </h3>
     <hr class="border border-danger border-2 opacity-50">
